syntax = "proto3";

package agentlocal;

option go_package = "agentlocalpb";

import "google/api/annotations.proto";

message StatusRequest {}

message StatusResponse {
  string agent_id = 1;
  string node_id = 2;
}

// AgentLocal service provides public methods for checking pmm-agent status locally.
service AgentLocal {
  // Status returns current pmm-agent status.
  rpc Status(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      post: "/local/Status"
      body: "*"
    };
  }
}
